[package]
name = "async-ucx"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>", "Yiyuan Liu <yiyuanliu1997@gmail.com>"]
edition = "2021"
description = "Asynchronous Rust bindings to UCX."
homepage = "https://github.com/madsys-dev/async-ucx"
repository = "https://github.com/madsys-dev/async-ucx"
license = "MIT"
keywords = ["ucx", "bindings", "async"]
categories = ["asynchronous", "api-bindings", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
event = ["tokio"]
am = ["tokio", "crossbeam"]

[dependencies]
ucx1-sys = { version = "0.1", path = "ucx1-sys" }
os_socketaddr = "0.1"
futures = "0.3"
futures-lite = "1.11"
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.0", features = ["net"], optional = true }
crossbeam = { version = "0.8", optional = true }
derivative = "2.2.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
env_logger = "0.9"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2.17", default-features = false, features = ["env-filter", "fmt"] }
test-log = "0.2"
